--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-09 04:18:37
+lastsearch = 2024-08-09 11:38:46
 
 [shopee.vn]
 match = -51.9%%
@@ -174,7 +174,7 @@ url = https://dogiasi.net/san-pham/chan-men-long-tuyet-trang-in-tho-gau-xuat-han
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOopEMS0WX_aBPiW2rZq8WtN0Sp1AjrcndKyJo-h8zsQJBn-u5PDs
 
 [tuoitre.vn]
 match = -59.3%%
