--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-09 04:22:34
+lastsearch = 2024-08-09 11:43:41
 
 [chieutruc.info]
 match = -63.6%%
@@ -37,14 +37,14 @@ title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng
 url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
-match = 36.4%%
-title = Chiếu Cói Thái Bình | Hanoi
-url = https://www.facebook.com/ChieucoiThaiBinh102/?locale=vi_VN
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
-match = -77.3%%
-title = Bác sĩ giải đáp tỉ mỉ các chỉ số thai nhi theo tuần
-url = https://medlatec.vn/tin-tuc/bac-si-giai-dap-ti-mi-cac-chi-so-thai-nhi-theo-tuan-s74-n23646
+match = -109.1%%
+title = Sự phát triển của thai 18 tuần và những thay đổi trên cơ ...
+url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-doi-tren-co-the-thai-phu-s74-n28778
 
 [www.lazada.vn]
 match = -40.9%%
@@ -174,7 +174,7 @@ url = https://ababy.com.vn/chieu-coi-100x60cm-p429.html
 [demxanh.com]
 match = -31.8%%
 title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html?srsltid=AfmBOorEpOE54fUmXixRz1o17K43NpCh2mPhUsJZ1_RCwpIK5J8vvwXg
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [tamanhhospital.vn]
 match = -104.5%%
