--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-09 10:56:06
+lastsearch = 2024-08-09 11:41:35
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -207,9 +207,9 @@ title = Thảm Trải Giường | Hanoi
 url = https://www.facebook.com/ShopThamTraiGiuong/
 
 [erado.vn]
-match = -10.0%%
-title = Giường ngủ da hạng sang mã 89
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-89.html?srsltid=AfmBOoo__jVHGlZgj2tepB00aWHLVAN_tAMxS27VZdgHQ_YIl5aC07CV
+match = -105.0%%
+title = Top Địa Chỉ Mua Giường Ngủ Cao Cấp Nhập Khẩu Uy Tín ...
+url = https://erado.vn/giuong-da-that-nhap-khau.html
 
 [www.diyaudio.com]
 match = -65.0%%
