--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-09 10:34:57
+lastsearch = 2024-08-09 11:39:28
 
 [shopee.vn]
-match = -76.2%%
-title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường loại 1
+match = -114.3%%
+title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng ...
+url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
 
 [www.lazada.vn]
 match = -85.7%%
 title = Thảm Lông Cừu Thảm Trải Giường Trải SànTtrần Bông 3 ...
-url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOopaqeZEeyz456vTSwijOXMBHPT-mE95UgP_jkVhkj7QGI80hZ8E
+url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html
 
 [tiki.vn]
 match = -38.1%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOooqO3rhRhonO7sDAL37FqlA9p6cHrfqnL8-2ODInWWZZSPLch4t
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
 
 [giuongxep.com]
 match = -57.1%%
