--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-09 06:30:19
+lastsearch = 2024-08-09 11:40:11
 
 [xoptraisan.info]
 match = -115.8%%
@@ -72,9 +72,9 @@ title = THẢM XỐP MỘT MẦU - 60cmx60cm
 url = https://khovatlieusan.com/tham-xop-mot-mau-60cmx60cm-889616.html
 
 [www.lazada.vn]
-match = -126.3%%
-title = 10 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 60cm x ...
-url = https://www.lazada.vn/products/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-60cm-x-60cm-x-06cmtam-mau-xam-sang-nhu-hinh-i1051678959-s3587446608.html?srsltid=AfmBOoox0vpp9flp_PVWkH1ve64fYdcsjpizcEn-GYH3HS5CABh582Jl
+match = -94.7%%
+title = Thảm Xốp Nỉ Giá Tốt T05/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tham-xop-ni/
 
 [www.sendo.vn]
 match = -126.3%%
