--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-08-09 04:27:13
+lastsearch = 2024-08-09 11:46:07
 
 [www.lazada.vn]
 match = -212.5%%
@@ -69,7 +69,7 @@ url = https://osnat.bandcamp.com/album/-
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOoqWprCJnvsz-ehsPi3HK2UcsAeTqJAQvLDct8ULTBXNrzENgT2W
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
