--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-09 14:28:06
+lastsearch = 2024-08-09 14:48:17
 
 [hoa18.com]
 match = -126.3%%
@@ -19,7 +19,7 @@ url = https://www.youtube.com/watch?v=demL5DzJK5M
 [kallos.co]
 match = -105.3%%
 title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
-url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
+url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua?srsltid=AfmBOorJv0QcpSUUd-7N66eCRyASn3zwSBIebnXVGfVHMkizi143MUE1
 
 [www.facebook.com]
 match = -47.4%%
