--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-08 13:35:13
 
 [search]
-lastsearch = 2024-08-05 18:28:17
+lastsearch = 2024-08-09 15:40:40
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Trúc Tăm HT Loại Bền , Đẹp
-url = https://shopee.vn/Chiếu-Trúc-Tăm-HT-Loại-Bền-Đẹp-i.117037771.1936980907
+match = -115.0%%
+title = 160x200 ; 180x200 ; 200x220 - Chiếu Tăm H&T Hương Trúc
+url = https://shopee.vn/Chiếu-Tăm-H-T-Hương-Trúc-Kích-thước-120x190-150x190-160x200-180x200-200x220-i.752854860.22042172270
 
 [www.diepxuan.com]
 match = -10.0%%
-title = Chiếu điều hòa mây 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html
+title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
 
 [chuyenhangviet.com]
 match = -90.0%%
@@ -43,16 +43,21 @@ url = https://chieutruc.org/chieu-truc-tam-ht-120x190
 
 [thegioidemonline.com]
 match = -5.0%%
-title = Chiếu trúc thanh Hương Trúc 150 x 190cm
-url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-1-5-0-1-9-0-cm.html
+title = Chiếu trúc thanh Hương Trúc 100 x 190cm
+url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-100-190.html
 
 [www.facebook.com]
-match = 31.6%%
-title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+match = -75.0%%
+title = Đệm 24h Thái Bình - Chăn Ga Gối Đệm's post
+url = https://www.facebook.com/story.php/?story_fbid=716670557148181&id=100064157288007
 
 [muasamcong.mpi.gov.vn:8082]
 match = -25.0%%
 title = Kết quả chọn nhà thầu trúng thầu
 url = http://muasamcong.mpi.gov.vn:8082/NC/EP_COJ_NCQ804.jsp?bidNo=20220897109&bidTurnNo=00
+
+[vn.biggo.com]
+match = -90.0%%
+title = Chiếu Trúc Tăm Ht giá rẻ Tháng 6,2024|BigGo Việt Nam
+url = https://vn.biggo.com/s/chiếu+trúc+tăm+ht/
 
