--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-09 11:36:22
+lastsearch = 2024-08-09 15:41:01
 
 [shopee.vn]
 match = -45.8%%
@@ -37,9 +37,9 @@ title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
 url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 
 [sieuthidem.vn]
-match = 16.7%%
-title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+match = 50.0%%
+title = Chiếu điều hoà Tencel - Hà Nội
+url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
 
 [cungnhaulamgiau.vn]
 match = 4.2%%
