--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-09 13:54:38
+lastsearch = 2024-08-09 15:43:27
 
 [www.diepxuan.com]
-match = 25.0%%
-title = Ga chun EPCARLESS 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
+match = 10.7%%
+title = Chiếu lác 90x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-lac-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
