--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-08-09 14:01:05
+lastsearch = 2024-08-09 15:39:19
 
 [demdreamland.vn]
 match = 25.6%%
@@ -75,4 +75,9 @@ url = https://www.facebook.com/photo.php?fbid=2248145408633147&id=27351661609604
 match = 35.3%%
 title = Đệm cao su Dreamland Natural Latex
 url = https://thegioidemcaosu.com/dem-cao-su-dreamland-natural-latex/
+
+[demhong.vn]
+match = 15.4%%
+title = Ngủ trọn giấc với đệm Dreamland cao cấp
+url = https://demhong.vn/ngu-tron-giac-voi-dem-dreamland/
 
