--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-09 15:43:05
+lastsearch = 2024-08-09 18:10:53
 
 [www.everonvn.vn]
 match = 68.0%%
@@ -27,9 +27,9 @@ title = Ruột gối Everon Thư giãn cổ
 url = https://everonchinhhang.vn/products/ruot-goi-thu-gian-co
 
 [tiki.vn]
-match = 3.4%%
-title = Ruột gối everon 45x65 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ruột gối everon 45x65
+match = 6.9%%
+title = Ruột gối 45x65 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ruột gối 45x65
 
 [thegioichanra.com]
 match = 6.9%%
@@ -79,7 +79,7 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOoqlX-7w2QWL7bvtP4KJmRXiOqkEuVDtJyPeJYsoOGfec9ZV-VsE
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 
 [everonvn.com.vn]
 match = -6.9%%
